--- a/jenkinsx/sonarqube/sonarqube-ingress.yml
+++ b/jenkinsx/sonarqube/sonarqube-ingress.yml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: sonarqube.jx.mentordigital.io
+  - host: sonarqube.jx.{hostname}
     http:
       paths:
       - path: /
